sumo/tests/netgen/errors/false_output/options.netgen
--grid --grid.number=10 --grid.length=400 --output-file=output/net.net.xml
